# yolov8_tensorrt-main

./: CMakeLists.txt  README.md
src/: main.cpp
